@@ -271,10 +271,14 @@ debug_fprintf(__func__, "f:%s removed at index %d", [id_ UTF8String], i);
         if(wtype == OUTPUTS || wtype == INPUTS) {
             View option_type = wtype == OUTPUTS ? PLAYBACK : RECORDING;
             NSArray *tc_widgets = [self getWidgetsWithType: option_type];
-            NSArray *values = [self getWidgetsNamesWithType: wtype];
+            NSArray *values = [self getWidgetsAttr: @selector(name)
+                                          withType: wtype];
+            NSArray *mapvalues = [self getWidgetsAttr: @selector(internalName)
+                                             withType: wtype];
             for(int j = 0; j < [tc_widgets count]; ++j) {
                 Widget *tc_widget = [tc_widgets objectAtIndex: j];
                 [tc_widget replaceOptions: values];
+                [[tc_widget options] replaceMapping: mapvalues];
             }
         }
     }
@@ -358,12 +362,13 @@ debug_fprintf(__func__, "f:%s removed at index %d", [id_ UTF8String], i);
     return results;
 }
 
--(NSArray*) getWidgetsNamesWithType: (View) type {
+-(NSArray*) getWidgetsAttr: (SEL) selector
+                  withType: (View) type {
     NSMutableArray *results = [NSMutableArray arrayWithCapacity: 0];
     for(int i = 0; i < [allWidgets count]; ++i) {
         Widget *widget = [allWidgets objectAtIndex: i];
         if([widget type] == type) {
-            [results addObject: [widget name]];
+            [results addObject: [widget performSelector: selector]];
         }
     }
     return results;
