@@ -1,5 +1,5 @@
 // This is a part of pacmixer @ http://github.com/KenjiTakahashi/pacmixer
-// Karol "Kenji Takahashi" Woźniak © 2012 - 2013
+// Karol "Kenji Takahashi" Woźniak © 2012 - 2014
 //
 // This program is free software: you can redistribute it and/or modify
 // it under the terms of the GNU General Public License as published by
@@ -21,12 +21,12 @@
 
 
 typedef enum {
+    OUTPUTS = 0,
+    PLAYBACK = 1,
+    INPUTS = 2,
+    RECORDING = 3,
+    SETTINGS,
     ALL,
-    PLAYBACK,
-    RECORDING,
-    OUTPUTS,
-    INPUTS,
-    SETTINGS
 } View;
 
 
